fixed first card image size on smaller devices

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -54,3 +54,15 @@
     margin-bottom: 15px;
   }
 }
+
+
+// SMALL DEVICES
+@media only screen and (max-width: $screen-sm-max) {
+  .card-lg {
+  padding: 10px;
+
+  .img-card {
+    height: auto;
+  }
+}
+}
